--- a/front/index.html
+++ b/front/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://www.webrtc-experiment.com/EBML.js"></script>
     <title>Vite + React + TS</title>
+    <script>
+      var parcelRequire;
+    </script>
   </head>
   <body>
     <div id="root"></div>
